rendering works pretty well

--- a/test.html
+++ b/test.html
@@ -1,6 +1,10 @@
 <html>
 <head>
   <style>
+  @font-face {
+    font-family: "Pixxel";
+    src: url("/pixxel.ttf");
+  }
   body {
     margin: 0px;
   }
@@ -25,7 +29,9 @@
 </head>
 
 <body>
-  <div id="template-container"></div>
+  <div id="template-container">
+    <svg xmlns="http://www.w3.org/2000/svg" width="600" height="300" viewBox="0 0 60 30" id="container"></svg>
+  </div>
   <script src="/DisplayLib.js"></script>
   <script src="/test.js"></script>
 </body>
