serialization and 'deserialization' works

--- a/tests/list/list.html
+++ b/tests/list/list.html
@@ -17,8 +17,8 @@
   svg {
     margin: 20px;
     background: grey;
-    width: 600px;
-    height: 300px;
+    width: 600;
+    height: 160;
   }
   svg::before {
     padding: 0px 8px;
@@ -30,7 +30,7 @@
 
 <body>
   <div id="template-container">
-    <svg xmlns="http://www.w3.org/2000/svg" width="600" height="300" viewBox="0 0 60 30" id="container"></svg>
+    <!--<svg xmlns="http://www.w3.org/2000/svg" width="600" height="300" viewBox="0 0 60 30" id="container"></svg>-->
   </div>
   <button class="scroll">UP</button>
   <button class="scroll">DOWN</button>
