--- a/tests/list/index.html
+++ b/tests/list/index.html
@@ -17,8 +17,8 @@
   svg {
     margin: 20px;
     background: grey;
-    width: 600;
-    height: 160;
+    width: 1200;
+    height: 320;
   }
   svg::before {
     padding: 0px 8px;
@@ -39,6 +39,6 @@
   <input id="width" type="number"></input>
   <button class="size">WIDTH</button>
   <script src="/DisplayLib.js"></script>
-  <script src="/list_client.js"></script>
+  <script src="/client.js"></script>
 </body>
 </html>
