moved basic (boilerplate) tests

--- a/tests/default/test.html
+++ b/tests/default/test.html
@@ -30,7 +30,7 @@
 
 <body>
   <div id="template-container">
-    <svg xmlns="http://www.w3.org/2000/svg" width="600" height="300" viewBox="0 0 60 30" id="container"></svg>
+    <!--<svg xmlns="http://www.w3.org/2000/svg" width="600" height="300" viewBox="0 0 60 30" id="container"></svg>-->
   </div>
   <script src="/DisplayLib.js"></script>
   <script src="/test.js"></script>
