visual elements are mostly finished, drag still needs work

--- a/tests/list/index.html
+++ b/tests/list/index.html
@@ -4,12 +4,16 @@
   body {
     margin: 0px;
   }
+  [name=bounds] {
+    cursor: move;
+  }
   </style>
 </head>
 
 <body>
   <div id="template-container">
   </div>
+  <button id="button">Submit</button>
   <script src="/DisplayLib.js"></script>
   <script src="/client.js"></script>
 </body>
