test refined, panels sent correctly but objects do not appear.  could be sent correctly (no errors) but not obvious from logs

--- a/tests/list/index.html
+++ b/tests/list/index.html
@@ -11,9 +11,21 @@
 </head>
 
 <body>
-  <div id="template-container">
-  </div>
+  <div id="template-container"></div>
+  <br>
+  <button id="new_template">New Template</button>
+  <br>
+  <button id="new_panel" disabled>New Panel</button>
+  <br>
+  <label for="text">Text</label>
+  <input type="text" id="text" name="text">
+  <button id="new_textbox" disabled>New Textbox</button>
+  <br>
+  <button id="test_button">Test</button>
   <button id="button">Submit</button>
+
+  <br>
+  <pre id="output_textbox"></pre>
   <script src="/DisplayLib.js"></script>
   <script src="/client.js"></script>
 </body>
