--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <br>
   <pre id="output_textbox"></pre>
-  <script src="/DisplayLib.js"></script>
-  <script src="/client.js"></script>
+  <script src="./DisplayLib.js"></script>
+  <script src="./client.js"></script>
 </body>
 </html>
